# sample-search

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.macos.txt
research/: 20231029_audio_batch_transform.py  20231030_audio_semantic_search.py  20231030_upload_embeddings_to_db.py  20231203_coreml_clap.py  20231203_coreml_tests.py  20231205_try_hg_clap_models.py  20231212_msclap_audio_batch_transform.py  20231212_msclap_audio_captioning.py  20231212_msclap_audio_semantic_search.py  20231212_msclap_upload_embeddings_to_db.py  20240106_trace_msclap.py  20240111_script_msclap.py  20240520_export_model_to_onnx.py  20240606_build_sample_classification_dataset.py
src/: database.py  datasets.py  demo.py  models.py  search.py  settings.py
ui-sample-search/ui-sample-search/ui-sample-search/: ContentView.swift  ui_sample_searchApp.swift
ui-sample-search/ui-sample-search/ui-sample-search.xcodeproj/: project.pbxproj
ui-sample-search/ui-sample-search/ui-sample-search.xcodeproj/project.xcworkspace/xcuserdata/flor.xcuserdatad/: UserInterfaceState.xcuserstate
ui-sample-search/ui-sample-search/ui-sample-search.xcodeproj/xcuserdata/flor.xcuserdatad/xcschemes/: xcschememanagement.plist
ui-sample-search/ui-sample-search/ui-sample-searchTests/: ui_sample_searchTests.swift
ui-sample-search/ui-sample-search/ui-sample-searchUITests/: ui_sample_searchUITests.swift  ui_sample_searchUITestsLaunchTests.swift
