[tool.poetry]
name = "sample_search"
version = "0.1.0"
description = "AI powered semantic search engine for music samples retrieval"
authors = ["Dario Wisznewer <dariowisznewer@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.6"
laion-clap = "^1.1.6"
chromadb = "0.5.5"
matplotlib = "^3.8.2"
transformers = "4.34.0"
protobuf = "^3.20.3"
numpy = "1.23.5"
streamlit = "^1.40.2"
msclap = "^1.3.3"
tqdm = "^4.67.1"
watchdog = "^6.0.0"
pydantic-settings = "^2.6.1"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
ipykernel = "^6.29.5"
ipython = "^8.17.2"
ipdb = "^0.13.13"
mypy = "^1.7.0"
python-dotenv = "^1.0.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.black]
line-length = 88
target-version = ['py38']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
